# wa_backend

./: backend-doc.md  dockerfile  pyproject.toml
k8s/: cm.yml  deployment.yml  ingress.yml  svc.yml
