[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "wa_backend"
description = "white app flask backend"
version = "0.0.0"
requires-python = ">=3.10.8"
readme = "README.md"

dependencies = [
  "Flask",
  "flask-restx",
  "gunicorn",
  "Werkzeug == 2.2.2",
  "tomli",
  "Flask-Cors >= 3.0.10",
  "Flask-SQLAlchemy >= 3.0.2",
  "SQLAlchemy >= 1.4"
]

[project.optional-dependencies]
ci = ["black", "pylint", "coverage", "pytest", "flake8", "tox"]
